<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/placeShipsView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_place_ships"
    android:orientation="vertical"
    tools:context="PlaceShipsActivity">

    <Button
        android:id="@+id/placeButton"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/placeShipsBoardView"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="376dp"
        android:layout_marginEnd="199dp"
        android:layout_marginBottom="200dp"
        android:background="@android:color/holo_blue_dark"
        android:elevation="6dp"
        android:onClick="goToWaitingActivity"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:text="@string/place_ships"
        android:textColor="@android:color/background_light"
        android:textSize="12sp" />

    <Button
        android:id="@+id/rotateShip"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/placeButton"
        android:layout_alignStart="@+id/placeButton"
        android:layout_alignEnd="@+id/placeButton"
        android:layout_marginStart="201dp"
        android:layout_marginTop="-248dp"
        android:layout_marginEnd="-201dp"
        android:background="@android:color/holo_blue_dark"
        android:onClick="rotateButtonTapped"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:text="@string/rotate_ship"
        android:textColor="@android:color/background_light"
        android:textSize="12sp" />

    <pl.edu.pw.ii.battleship.BoardView
        android:id="@+id/placeShipsBoardView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="55dp" />

    <ImageView
        android:id="@+id/aircraftcarrier"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_below="@+id/battleship"
        android:layout_alignParentStart="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/aircraftcarrier"
        app:srcCompat="@drawable/aircraftcarrier5" />

    <ImageView
        android:id="@+id/submarine"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_below="@+id/frigate"
        android:layout_alignParentStart="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/submarine"
        app:srcCompat="@drawable/frigate3" />

    <ImageView
        android:id="@+id/battleship"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_below="@+id/submarine"
        android:layout_alignParentStart="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/battleship"
        app:srcCompat="@drawable/battleship4" />

    <ImageView
        android:id="@+id/frigate"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_below="@+id/minesweeperStatus"
        android:layout_alignParentStart="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/frigate"
        app:srcCompat="@drawable/frigate3" />

    <ImageView
        android:id="@+id/minesweeperStatus"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="50dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/minesweeper"
        app:srcCompat="@drawable/minesweeper2" />

</RelativeLayout>
