<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/placeShipsView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    tools:context=".MatchingPlayersActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="55dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@android:color/background_light" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="199dp"
            android:text="@string/waiting"
            android:textAlignment="center"
            android:textColor="@android:color/background_light" />

    </LinearLayout>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:contentDescription="@string/battleship"
        android:foregroundGravity="center"
        android:src="@drawable/background_connection" />

</RelativeLayout>