<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_game"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="MainActivity">

    <LinearLayout
        android:paddingTop="55dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight=".25"
            android:elevation="1dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:orientation="vertical">

                <pl.edu.pw.ii.battleship.BoardView
                    android:id="@+id/playerBoardView"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_weight="0.30" />


            </LinearLayout>

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:orientation="vertical"
                android:layout_width="0dp">

                <TextView
                    android:id="@+id/app_title"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light" />

                <Button
                    android:id="@+id/resetGame"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/holo_blue_dark"
                    android:onClick="resetGame"
                    android:text="@string/main_menu_label"
                    android:theme="@style/AppTheme" />
                <TextView
                    android:id="@+id/whosTurnLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/strategy"
                    android:textColor="@android:color/background_light" />

                <TextView
                    android:id="@+id/whosTurn"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="@string/player_turn_status"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light" />



            </LinearLayout>
        </LinearLayout>

        <pl.edu.pw.ii.battleship.BoardView
            android:id="@+id/opponentBoardView"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginTop="10dp"
            android:layout_weight=".65"
            android:foregroundTint="#2B2B2B" />
    </LinearLayout>

</RelativeLayout>
